--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.4",
@@ -46,8 +47,8 @@
     },
     "transformIgnorePatterns": [
       "/node_modules/",
-      "\\.pnp\\.[^\\\/]+$",
-      "\\.png$" 
+      "\\.pnp\\.[^\\/]+$",
+      "\\.png$"
     ]
   }
 }
