--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.3.2"
+    "express-sanitizer": "^1.0.6",
+    "express-validator": "^7.0.1",
+    "https": "^1.0.0",
+    "mongoose": "^8.3.2",
+    "xss": "^1.0.15"
   }
 }
